# Akudemy

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  dependencies.py  main.py
app/db/: session.py
app/routers/: content.py  health.py
app/services/: content.py
data/exam_papers/: .gitkeep
scripts/: README.md  exam_paper_scraper.py
tests/: test_api.py  test_health.py
